# house-agent-ai

./: .gitignore  PRD.md  main.py  pyproject.toml  railway.json
ai/: classifier.py  smart_reply.py
cal/: google_calendar.py
channels/: call_handler.py  email_handler.py  whatsapp_handler.py
database/: messages.py  sheets.py  tickets.py
frontend/: calendar.html  index.html  knowledge_base.html  tickets.html
frontend/css/: style.css
frontend/js/: api.js  dashboard.js  tickets.js
services/: escalation.py  scheduler.py  ticket_service.py
webhooks/: routes.py
